--- a/src/client/css/blocks/promo.css
+++ b/src/client/css/blocks/promo.css
@@ -2,11 +2,13 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	flex-grow: 1;
 	box-sizing: border-box;
-	min-height: 100%;
+	min-width: 320px;
 	padding: 2rem 1rem 0;
 	overflow: hidden;
 	text-align: center;
+	background-image: linear-gradient(#71bddf, #61bddf);
 }
 
 .promo__link {
@@ -67,10 +69,17 @@
 
 .promo__addition {
 	display: block;
+	margin-top: 0.25rem;
+	font-size: 1.25rem;
 	transform: scale(0);
 }
 
+.promo__addition a:not(:hover) {
+	text-decoration: none;
+}
+
 .promo__image {
+	flex-shrink: 0;
 	transform-origin: center bottom;
 }
 
