--- a/src/client/css/common/global.css
+++ b/src/client/css/common/global.css
@@ -1,31 +1,41 @@
 html {
+	--color-black: #323232;
+	--color-link: #1e5f9a;
+	--font-basic: "Manrope", sans-serif;
 	--scroll-behavior: auto;
 	--transition: none;
 
-	height: 100%;
 	font-size: 14px;
 }
 
 body {
-	min-width: 320px;
-	height: 100%;
 	margin: 0;
 	line-height: 1.5;
-	font-family: "Manrope", sans-serif;
+	font-family: var(--font-basic);
 	font-feature-settings:
 		"tnum" on,
 		"lnum" on;
-	color: #323232;
+	color: var(--color-black);
 	text-rendering: optimizeLegibility;
 	-webkit-tap-highlight-color: transparent;
-	background-image: linear-gradient(#71bddf, #61bddf);
-	overflow: hidden scroll;
+	overflow-x: hidden;
 	overflow-anchor: none;
+}
+
+a {
+	color: var(--color-link);
 }
 
 img {
 	max-width: 100%;
 	height: auto;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+	html {
+		--transition: 0.3s ease-in-out;
+		--scroll-behavior: smooth;
+	}
 }
 
 @media (min-width: 768px) {
@@ -37,12 +47,5 @@ img {
 @media (min-width: 1240px) {
 	html {
 		font-size: 20px;
-	}
-}
-
-@media (prefers-reduced-motion: no-preference) {
-	html {
-		--transition: 0.3s ease-in-out;
-		--scroll-behavior: smooth;
 	}
 }
