--- a/src/client/css/critical.css
+++ b/src/client/css/critical.css
@@ -3,4 +3,5 @@
 @import url("common/global.css");
 @import url("common/helpers.css");
 
-@import url("components/promo.css");
+@import url("blocks/layout.css");
+@import url("blocks/promo.css");
