--- a/src/client/css/blocks/promo.css
+++ b/src/client/css/blocks/promo.css
@@ -5,38 +5,18 @@
 	flex-grow: 1;
 	box-sizing: border-box;
 	min-width: 320px;
-	padding: 2rem 1rem 0;
+	padding: 1.5rem 1rem 0;
 	overflow: hidden;
 	text-align: center;
-	background-image: linear-gradient(#71bddf, #61bddf);
 }
 
-.promo__link {
-	position: relative;
-	display: block;
-	padding: 1em 2em;
-	font-weight: 500;
-	font-size: 20px;
-	color: #ffffff;
-	text-decoration: none;
-	background-color: #b9c038;
-	border-radius: 1rem;
-	outline-offset: 0.25rem;
-	box-shadow:
-		1px 1px 1px #5555551f,
-		2px 2px 2px #5555553d;
+.promo__nav {
 	transform: translateY(-10rem);
-	transition: var(--transition);
-	transition-property: background-color, opacity;
-}
-
-.promo__link:focus-visible {
-	outline: 2px solid;
 }
 
 .promo__lead {
 	margin: auto 0 0.5rem;
-	padding-top: 2rem;
+	padding-top: 1.5rem;
 	transform: scale(0);
 	transform-origin: center bottom;
 }
@@ -44,13 +24,11 @@
 .promo__text {
 	position: relative;
 	margin: 0 0 1.5rem;
-	padding: 3rem 4rem;
-	font-size: 1.75rem;
+	padding: 1.5rem;
+	text-wrap: balance;
 	background-color: #ffffff;
 	border-radius: 5rem;
-	box-shadow:
-		0 1px 1px #5555551f,
-		0 2px 2px #5555553d;
+	box-shadow: var(--shadow);
 }
 
 .promo__text::after {
@@ -61,16 +39,13 @@
 	width: 2rem;
 	height: 2rem;
 	background-color: inherit;
-	box-shadow:
-		1px 1px 1px #5555551f,
-		2px 2px 2px #5555553d;
+	box-shadow: var(--shadow-secondary);
 	transform: translate(-50%, -50%) rotate(45deg);
 }
 
 .promo__addition {
 	display: block;
 	margin-top: 0.25rem;
-	font-size: 1.25rem;
 	transform: scale(0);
 }
 
@@ -80,21 +55,45 @@
 
 .promo__image {
 	flex-shrink: 0;
+	width: 260px;
+	height: auto;
 	transform-origin: center bottom;
 }
 
-@media (hover: hover) {
-	.promo__link:hover {
-		background-color: #605052;
+/* Ограничение для низких мобильных экранов */
+@media (max-height: 479px) and (max-width: 767px) {
+	.promo {
+		overflow-y: auto;
+	}
+}
+
+/* Ограничение для низких планшетов и десктопов */
+@media (max-height: 768px) and (min-width: 768px) {
+	.promo {
+		overflow-y: auto;
+	}
+}
+
+@media (min-width: 768px) {
+	.promo__lead {
+		padding-top: 2rem;
+	}
+	.promo__text {
+		padding: 3rem 4rem;
+		font-size: 1.75rem;
 	}
 
-	.promo__link:active {
-		opacity: 0.3;
+	.promo__addition {
+		font-size: 0.8em;
+	}
+
+	.promo__image {
+		width: auto;
 	}
 }
 
 @media (prefers-reduced-motion: no-preference) {
-	.promo__link {
+	.promo__nav {
 		animation: move-back 1.2s ease-in-out 4s forwards;
 	}
 
