--- a/src/client/css/common/global.css
+++ b/src/client/css/common/global.css
@@ -2,10 +2,12 @@ html {
 	--color-black: #323232;
 	--color-link: #1e5f9a;
 	--font-basic: "Manrope", sans-serif;
+	--shadow: 0 1px 1px #5555551f, 0 2px 2px #5555553d;
+	--shadow-secondary: 1px 1px 1px #5555551f, 2px 2px 2px #5555553d;
 	--scroll-behavior: auto;
 	--transition: none;
 
-	font-size: 14px;
+	font-size: 16px;
 }
 
 body {
@@ -23,12 +25,23 @@ body {
 }
 
 a {
+	text-decoration-skip-ink: none;
 	color: var(--color-link);
 }
 
 img {
 	max-width: 100%;
 	height: auto;
+}
+
+ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+p {
+	margin: 0;
 }
 
 @media (prefers-reduced-motion: no-preference) {
