--- a/src/client/css/blocks/portfolio.css
+++ b/src/client/css/blocks/portfolio.css
@@ -5,17 +5,30 @@
 
 .portfolio__card {
 	display: grid;
-	gap: 0.5rem;
-	align-content: start;
+	grid-template-columns: 32px 1fr;
 	justify-items: start;
+	align-items: center;
+	align-content: start;
+	gap: 0.5rem;
 	padding: 1.5rem;
 	background-color: #ffffff;
 	border-radius: 0.5rem;
 	box-shadow: var(--shadow);
 }
 
+.portfolio__image {
+	display: flex;
+	padding: 5px;
+	background-color: #dddddd;
+	border-radius: 0.5rem;
+}
+
 .portfolio__link {
 	font-size: 1.25rem;
+}
+
+.portfolio__description {
+	grid-column: 1 / -1;
 }
 
 @media (min-width: 1240px) {
